kubernetes/apps/kube-system/cilium/gateway/external-auth.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-auth
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external-auth.zebernst.dev
  labels:
    external-dns.alpha.kubernetes.io/registry: cloudflare
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.20.22
    - type: IPAddress
      value: ::ffff:192.168.20.22
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      external-dns.alpha.kubernetes.io/registry: cloudflare
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.zebernst.dev"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.zebernst.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: zebernst-dev-tls
            namespace: cert-manager
