kubernetes/apps/kube-system/cilium/gateway/external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external.zebernst.dev
    gatus.home-operations.com/endpoint: |
      client:
        dns-resolver: tcp://1.1.1.1:53
      conditions:
        - "[STATUS] == 200"
  labels:
    external-dns.alpha.kubernetes.io/registry: cloudflare
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.20.20
    - type: IPAddress
      value: ::ffff:192.168.20.20
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.zebernst.dev"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.zebernst.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: zebernst-dev-tls
            namespace: cert-manager
