kubernetes/apps/kube-system/cilium/gateway/internal-auth.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-auth
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname gw-internal-auth.zebernst.dev
  labels:
    external-dns.alpha.kubernetes.io/registry: unifi
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.20.23
    - type: IPAddress
      value: ::ffff:192.168.20.23
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.zebernst.dev"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.zebernst.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: zebernst-dev-tls
            namespace: cert-manager
    - name: http-internal
      protocol: HTTP
      port: 80
      hostname: "*.internal"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-internal
      protocol: HTTPS
      port: 443
      hostname: "*.internal"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: internal-tls
            namespace: cert-manager
