kubernetes/apps/kube-system/cilium/gateway/lan-l4-minecraft.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lan-l4-minecraft
  labels:
    external-dns.alpha.kubernetes.io/registry: unifi
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.20.65
    - type: IPAddress
      value: ::ffff:192.168.20.65
  listeners:
    - name: java
      protocol: TCP
      port: 25565
      allowedRoutes:
        namespaces:
          from: All
