kubernetes/apps/kube-system/cilium/gateway/hubble.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui-canonical
spec:
  hostnames:
    - cilium.jptr.zebernst.dev
  parentRefs:
    - name: tailscale
      namespace: kube-system
      sectionName: https-canon
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
